#23 Reformatted code
Made continuation indents 1 tab